--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
 python-dotenv
-flask
 flask-cors
 schedule
+Flask
 gunicorn
+requests
