--- a/render.yaml
+++ b/render.yaml
@@ -5,4 +5,4 @@ services:
     region: oregon
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn -w 4 -b 0.0.0.0:3030 app.main:app"
+    startCommand: "gunicorn -w 4 -b 0.0.0.0:3030 src.main:app"
